<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="label_imc">IMC</string>
    <string name="label_tmb">TMB</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso
        do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="tmb_desc">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
    <string name="weight">Peso (Kg)</string>
    <string name="height">Altura (Cm)</string>
    <string name="calc">Calcular</string>
    <string name="fields_messages">Todos os campos devem ser maiores que zero</string>

    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>

    <string name="imc_response">Seu IMC é: %1$.2f</string>
    <string name="tmb_response">Seu TMB é: %1$.2f</string>
    <string name="list_response">resultado: %1$.2f, data: %2$s</string>
    <string name="save">Salvar</string>
    <string name="saved">Registro salvo om Sucesso!</string>
    <string name="search">Buscar</string>
    <string name="age">Idade</string>

</resources>