<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ImcActivity">

    <TextView
        style="@style/TextViewForm"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_desc" />

    <EditText
        android:id="@+id/edit_imc_weight"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/weight"
        style="@style/EditTextForm"/>

    <EditText
        android:id="@+id/edit_imc_height"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/height"
        style="@style/EditTextForm"/>

    <Button
        android:id="@+id/btn_imc_send"
        android:backgroundTint="@color/white"
        android:text="@string/calc"
        android:textColor="@color/black"
        android:layout_gravity="center"
        style="@style/ButtomForm"/>

</LinearLayout>

    </ScrollView>